# schedulebot

./: Procfile  README.MD  pyproject.toml  requirements.txt
schedulebot/: bot.py  schedule.py  utils.py
tests/: test_schedulebot.py
